Fix some sidebar & navbar alignments (Fixes #3)

--- a/chrome/DownToneUI/_globals.css
+++ b/chrome/DownToneUI/_globals.css
@@ -32,7 +32,7 @@
   --theme-shadow-margin: 6px;
   --theme-shadow: 0px 0px var(--theme-shadow-margin) hsla(0, 0%, 0%, 0.4);
 
-  --ui-sidebar-collapsed-width: 35px;
+  --ui-sidebar-collapsed-width: 34px;
   --ui-sidebar-extended-width: 300px;
   --ui-bookmarks-hover-debounce: 200ms;
   --ui-bookmarks-animation-speed: 200ms;
